HBASE-576  Investigate IPC performance
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hbase/trunk@702336 13f79535-47bb-0310-9956-ffa450edef68